--- a/main/index.html
+++ b/main/index.html
@@ -134,8 +134,7 @@
     <section id="contact" class="contact">
       <h2>Contact Us</h2>
       <p>
-        Have a laptop issue? Reach out to us for a free consultation and
-        estimate.
+        Have a laptop issue? Reach out to us via whatsapp below.
       </p>
       <p>
         <a
