--- a/main/index.html
+++ b/main/index.html
@@ -36,8 +36,8 @@
 
     <!-- Services Section -->
     <section id="services" class="services">
-      <h2>Our Services</h2>
-      <p>Some common problems.</p>
+      
+      <h2>Some common problems.</h2>
       <div class="service-list">
         <div class="service">
           <h3>Speed Optimization</h3>
